Merge branch 'master' into add-client-information