@@ -1,13 +1,10 @@
 package seedu.address.logic.session;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -17,172 +14,193 @@ import seedu.address.commons.core.GuiSettings;
 import seedu.address.logic.commands.AddCommand;
 import seedu.address.logic.commands.FindCommand;
 import seedu.address.logic.commands.ListCommand;
+import seedu.address.model.AddressBook;
 import seedu.address.model.person.FieldContainsKeywordsPredicate;
-import seedu.address.session.SessionCommand;
 import seedu.address.session.SessionData;
 import seedu.address.testutil.PersonBuilder;
 
 public class SessionRecorderTest {
 
-    private static final Path DEFAULT_PATH = Paths.get("data", "addressbook.json");
     private static final GuiSettings DEFAULT_GUI_SETTINGS = new GuiSettings();
 
     @Test
-    public void constructor_noArguments_createsEmptyRecorder() {
-        SessionRecorder recorder = new SessionRecorder();
-        SessionData snapshot = recorder.buildSnapshot(DEFAULT_PATH, DEFAULT_GUI_SETTINGS);
-
-        assertTrue(snapshot.getCommandHistory().isEmpty());
-        assertTrue(snapshot.getSearchKeywords().isEmpty());
+    public void markSnapshotPersisted_withoutDirtyFlag_noEffect() {
+        SessionRecorder recorder = new SessionRecorder(new AddressBook(), DEFAULT_GUI_SETTINGS);
+        assertFalse(recorder.isAddressBookDirty(new AddressBook()));
+        recorder.markSnapshotPersisted();
+        assertFalse(recorder.isAddressBookDirty(new AddressBook()));
     }
 
     @Test
-    public void constructor_withEmptySession_createsEmptyRecorder() {
-        SessionRecorder recorder = new SessionRecorder(Optional.empty());
-        SessionData snapshot = recorder.buildSnapshot(DEFAULT_PATH, DEFAULT_GUI_SETTINGS);
-
-        assertTrue(snapshot.getCommandHistory().isEmpty());
-        assertTrue(snapshot.getSearchKeywords().isEmpty());
+    public void markSnapshotPersisted_calledMultipleTimes_idempotent() {
+        SessionRecorder recorder = new SessionRecorder(new AddressBook(), DEFAULT_GUI_SETTINGS);
+        recorder.afterSuccessfulCommand(new AddCommand(new PersonBuilder().build()), true);
+        assertTrue(recorder.isAddressBookDirty(createSampleAddressBook()));
+        recorder.markSnapshotPersisted();
+        assertFalse(recorder.isAddressBookDirty(createSampleAddressBook()));
+        recorder.markSnapshotPersisted();
+        assertFalse(recorder.isAddressBookDirty(createSampleAddressBook()));
     }
 
     @Test
-    public void constructor_withExistingSession_restoresSessionData() {
-        // Create a session with command history and search keywords
-        List<SessionCommand> existingHistory = Arrays.asList(
-                new SessionCommand(Instant.parse("2024-01-01T10:00:00Z"), "add n/John"),
-                new SessionCommand(Instant.parse("2024-01-01T10:05:00Z"), "list")
-        );
-        List<String> existingKeywords = Arrays.asList("alice", "bob");
-        SessionData existingSession = new SessionData(
+    public void findAndListCommand_interleaving_keywordsAndDirtyFlag() {
+        SessionRecorder recorder = new SessionRecorder(new AddressBook(), DEFAULT_GUI_SETTINGS);
+        List<String> keywords = List.of("alice", "bob");
+        recorder.afterSuccessfulCommand(new FindCommand(new FieldContainsKeywordsPredicate(keywords)), false);
+        assertEquals(keywords, recorder.buildSnapshot(new AddressBook(), DEFAULT_GUI_SETTINGS).getSearchKeywords());
+        assertFalse(recorder.isAddressBookDirty(new AddressBook()));
+        recorder.afterSuccessfulCommand(new ListCommand(), false);
+        assertTrue(recorder.buildSnapshot(new AddressBook(), DEFAULT_GUI_SETTINGS).getSearchKeywords().isEmpty());
+        assertFalse(recorder.isAddressBookDirty(new AddressBook()));
+    }
+
+
+    private AddressBook createSampleAddressBook() {
+        AddressBook book = new AddressBook();
+        book.addPerson(new PersonBuilder().build());
+        return book;
+    }
+
+    @Test
+    public void constructor_withoutSession_initialisesCleanState() {
+        SessionRecorder recorder = new SessionRecorder(new AddressBook(), DEFAULT_GUI_SETTINGS);
+        SessionData snapshot = recorder.buildSnapshot(createSampleAddressBook(), DEFAULT_GUI_SETTINGS);
+
+        assertTrue(snapshot.getSearchKeywords().isEmpty());
+        assertFalse(recorder.isAddressBookDirty(createSampleAddressBook()));
+    }
+
+    @Test
+    public void constructor_withExistingSession_restoresKeywords() {
+        AddressBook addressBook = createSampleAddressBook();
+        SessionData previous = new SessionData(
                 Instant.parse("2024-01-01T10:10:00Z"),
-                DEFAULT_PATH,
-                existingKeywords,
-                existingHistory,
-                DEFAULT_GUI_SETTINGS
-        );
+                addressBook,
+                List.of("alice", "bob"),
+                DEFAULT_GUI_SETTINGS);
 
-        SessionRecorder recorder = new SessionRecorder(Optional.of(existingSession));
-        SessionData snapshot = recorder.buildSnapshot(DEFAULT_PATH, DEFAULT_GUI_SETTINGS);
+        SessionRecorder recorder = new SessionRecorder(addressBook, DEFAULT_GUI_SETTINGS, Optional.of(previous));
+        SessionData snapshot = recorder.buildSnapshot(addressBook, DEFAULT_GUI_SETTINGS);
 
-        assertEquals(2, snapshot.getCommandHistory().size());
-        assertEquals("add n/John", snapshot.getCommandHistory().get(0).getCommandText());
-        assertEquals("list", snapshot.getCommandHistory().get(1).getCommandText());
-        assertEquals(existingKeywords, snapshot.getSearchKeywords());
+        assertEquals(List.of("alice", "bob"), snapshot.getSearchKeywords());
+        assertFalse(recorder.isAddressBookDirty(addressBook));
     }
 
     @Test
-    public void afterSuccessfulCommand_regularCommand_addsToHistory() {
-        SessionRecorder recorder = new SessionRecorder();
-        AddCommand addCommand = new AddCommand(new PersonBuilder().build());
+    public void afterSuccessfulCommand_marksDirtyWhenAddressBookChanges() {
+        AddressBook current = createSampleAddressBook();
+        SessionRecorder recorder = new SessionRecorder(new AddressBook(), DEFAULT_GUI_SETTINGS);
+        recorder.afterSuccessfulCommand(new AddCommand(new PersonBuilder().build()), true);
 
-        recorder.afterSuccessfulCommand("add n/John Doe", addCommand);
-
-        SessionData snapshot = recorder.buildSnapshot(DEFAULT_PATH, DEFAULT_GUI_SETTINGS);
-        assertEquals(1, snapshot.getCommandHistory().size());
-        assertEquals("add n/John Doe", snapshot.getCommandHistory().get(0).getCommandText());
+        assertTrue(recorder.isAddressBookDirty(current));
     }
 
     @Test
-    public void afterSuccessfulCommand_multipleCommands_addsAllToHistory() {
-        SessionRecorder recorder = new SessionRecorder();
-        AddCommand addCommand = new AddCommand(new PersonBuilder().build());
-        ListCommand listCommand = new ListCommand();
+    public void afterSuccessfulCommand_nonMutatingCommandRetainsCleanFlag() {
+        SessionRecorder recorder = new SessionRecorder(new AddressBook(), DEFAULT_GUI_SETTINGS);
+        recorder.afterSuccessfulCommand(new ListCommand(), false);
 
-        recorder.afterSuccessfulCommand("add n/John Doe", addCommand);
-        recorder.afterSuccessfulCommand("list", listCommand);
-        recorder.afterSuccessfulCommand("add n/Jane Doe", addCommand);
-
-        SessionData snapshot = recorder.buildSnapshot(DEFAULT_PATH, DEFAULT_GUI_SETTINGS);
-        assertEquals(3, snapshot.getCommandHistory().size());
-        assertEquals("add n/John Doe", snapshot.getCommandHistory().get(0).getCommandText());
-        assertEquals("list", snapshot.getCommandHistory().get(1).getCommandText());
-        assertEquals("add n/Jane Doe", snapshot.getCommandHistory().get(2).getCommandText());
+        assertFalse(recorder.isAddressBookDirty(new AddressBook()));
     }
 
     @Test
-    public void afterSuccessfulCommand_findCommand_updatesSearchKeywords() {
-        SessionRecorder recorder = new SessionRecorder();
-        List<String> keywords = Arrays.asList("alice", "bob");
-        FindCommand findCommand = new FindCommand(new FieldContainsKeywordsPredicate(keywords));
+    public void afterSuccessfulCommand_findUpdatesKeywordsWithoutDirtyFlag() {
+        SessionRecorder recorder = new SessionRecorder(new AddressBook(), DEFAULT_GUI_SETTINGS);
+        List<String> keywords = List.of("alice", "bob");
+        recorder.afterSuccessfulCommand(new FindCommand(new FieldContainsKeywordsPredicate(keywords)), false);
 
-        recorder.afterSuccessfulCommand("find alice bob", findCommand);
-
-        SessionData snapshot = recorder.buildSnapshot(DEFAULT_PATH, DEFAULT_GUI_SETTINGS);
+        SessionData snapshot = recorder.buildSnapshot(new AddressBook(), DEFAULT_GUI_SETTINGS);
         assertEquals(keywords, snapshot.getSearchKeywords());
-        assertEquals(1, snapshot.getCommandHistory().size());
+        assertFalse(recorder.isAddressBookDirty(new AddressBook()));
     }
 
     @Test
-    public void afterSuccessfulCommand_listCommand_clearsSearchKeywords() {
-        SessionRecorder recorder = new SessionRecorder();
+    public void afterSuccessfulCommand_listClearsKeywords() {
+        SessionRecorder recorder = new SessionRecorder(new AddressBook(), DEFAULT_GUI_SETTINGS);
+        recorder.afterSuccessfulCommand(new FindCommand(new FieldContainsKeywordsPredicate(List.of("alice"))), false);
 
-        // First, set some search keywords with a find command
-        List<String> keywords = Arrays.asList("alice", "bob");
-        FindCommand findCommand = new FindCommand(new FieldContainsKeywordsPredicate(keywords));
-        recorder.afterSuccessfulCommand("find alice bob", findCommand);
+        recorder.afterSuccessfulCommand(new ListCommand(), false);
 
-        // Verify keywords are set
-        SessionData snapshot1 = recorder.buildSnapshot(DEFAULT_PATH, DEFAULT_GUI_SETTINGS);
-        assertEquals(keywords, snapshot1.getSearchKeywords());
-
-        // Now execute list command which should clear keywords
-        ListCommand listCommand = new ListCommand();
-        recorder.afterSuccessfulCommand("list", listCommand);
-
-        SessionData snapshot2 = recorder.buildSnapshot(DEFAULT_PATH, DEFAULT_GUI_SETTINGS);
-        assertTrue(snapshot2.getSearchKeywords().isEmpty());
-        assertEquals(2, snapshot2.getCommandHistory().size());
+        SessionData snapshot = recorder.buildSnapshot(new AddressBook(), DEFAULT_GUI_SETTINGS);
+        assertTrue(snapshot.getSearchKeywords().isEmpty());
     }
 
     @Test
-    public void afterSuccessfulCommand_multipleFindCommands_keepsLatestKeywords() {
-        SessionRecorder recorder = new SessionRecorder();
+    public void metadataChange_thenRevert_notDirty() {
+        SessionRecorder recorder = new SessionRecorder(new AddressBook(), DEFAULT_GUI_SETTINGS);
+        recorder.afterSuccessfulCommand(new FindCommand(new FieldContainsKeywordsPredicate(List.of("alice"))), false);
+        assertTrue(recorder.isAnyDirty(new AddressBook(), DEFAULT_GUI_SETTINGS));
 
-        List<String> keywords1 = Arrays.asList("alice");
-        FindCommand findCommand1 = new FindCommand(new FieldContainsKeywordsPredicate(keywords1));
-        recorder.afterSuccessfulCommand("find alice", findCommand1);
-
-        List<String> keywords2 = Arrays.asList("bob", "charlie");
-        FindCommand findCommand2 = new FindCommand(new FieldContainsKeywordsPredicate(keywords2));
-        recorder.afterSuccessfulCommand("find bob charlie", findCommand2);
-
-        SessionData snapshot = recorder.buildSnapshot(DEFAULT_PATH, DEFAULT_GUI_SETTINGS);
-        assertEquals(keywords2, snapshot.getSearchKeywords());
-        assertEquals(2, snapshot.getCommandHistory().size());
+        recorder.afterSuccessfulCommand(new ListCommand(), false);
+        assertFalse(recorder.isAnyDirty(new AddressBook(), DEFAULT_GUI_SETTINGS));
     }
 
     @Test
-    public void buildSnapshot_validInputs_createsCorrectSnapshot() {
-        SessionRecorder recorder = new SessionRecorder();
-        AddCommand addCommand = new AddCommand(new PersonBuilder().build());
-        recorder.afterSuccessfulCommand("add n/John", addCommand);
+    public void guiSettingsChange_onlyMarksDirtyWhenValueDiffers() {
+        SessionRecorder recorder = new SessionRecorder(new AddressBook(), DEFAULT_GUI_SETTINGS);
 
-        Path customPath = Paths.get("custom", "path.json");
-        GuiSettings customSettings = new GuiSettings(1024, 768, 100, 100);
+        GuiSettings updatedSettings = new GuiSettings(1024, 768, 10, 10);
+        recorder.afterGuiSettingsChanged(updatedSettings);
+        assertTrue(recorder.isAnyDirty(new AddressBook(), updatedSettings));
 
-        SessionData snapshot = recorder.buildSnapshot(customPath, customSettings);
+        // Setting the same value again should not clear the dirty flag prematurely
+        recorder.afterGuiSettingsChanged(updatedSettings);
+        assertTrue(recorder.isAnyDirty(new AddressBook(), updatedSettings));
 
-        assertNotNull(snapshot.getSavedAt());
-        assertEquals(customPath, snapshot.getAddressBookPath());
-        assertEquals(customSettings, snapshot.getGuiSettings());
-        assertEquals(1, snapshot.getCommandHistory().size());
+        // Reverting to baseline clears the metadata dirty flag
+        recorder.afterGuiSettingsChanged(DEFAULT_GUI_SETTINGS);
+        assertFalse(recorder.isAnyDirty(new AddressBook(), DEFAULT_GUI_SETTINGS));
     }
 
     @Test
-    public void buildSnapshot_multipleCallsSameState_differentTimestamps() throws InterruptedException {
-        SessionRecorder recorder = new SessionRecorder();
-        AddCommand addCommand = new AddCommand(new PersonBuilder().build());
-        recorder.afterSuccessfulCommand("add n/John", addCommand);
+    public void markSnapshotPersisted_resetsDirtyFlag() {
+        AddressBook current = createSampleAddressBook();
+        SessionRecorder recorder = new SessionRecorder(new AddressBook(), DEFAULT_GUI_SETTINGS);
+        recorder.afterSuccessfulCommand(new AddCommand(new PersonBuilder().build()), true);
+        assertTrue(recorder.isAddressBookDirty(current));
 
-        SessionData snapshot1 = recorder.buildSnapshot(DEFAULT_PATH, DEFAULT_GUI_SETTINGS);
-        Thread.sleep(10); // Small delay to ensure different timestamps
-        SessionData snapshot2 = recorder.buildSnapshot(DEFAULT_PATH, DEFAULT_GUI_SETTINGS);
+        recorder.markSnapshotPersisted();
 
-        // Timestamps should be different
-        assertTrue(snapshot2.getSavedAt().isAfter(snapshot1.getSavedAt())
-                || snapshot2.getSavedAt().equals(snapshot1.getSavedAt()));
-        // But command history should be the same
-        assertEquals(snapshot1.getCommandHistory(), snapshot2.getCommandHistory());
+        assertFalse(recorder.isAddressBookDirty(current));
+    }
+
+    @Test
+    public void buildSnapshot_containsAddressBookState() {
+        SessionRecorder recorder = new SessionRecorder(new AddressBook(), DEFAULT_GUI_SETTINGS);
+        AddressBook addressBook = createSampleAddressBook();
+
+        SessionData snapshot = recorder.buildSnapshot(addressBook, DEFAULT_GUI_SETTINGS);
+
+        assertEquals(addressBook.getPersonList(), snapshot.getAddressBook().getPersonList());
+        assertEquals(DEFAULT_GUI_SETTINGS, snapshot.getGuiSettings());
+    }
+
+    @Test
+    public void dirtyFlag_andSnapshotReflectsAddressBookMutation() {
+        SessionRecorder recorder = new SessionRecorder(new AddressBook(), DEFAULT_GUI_SETTINGS);
+        AddressBook ab = createSampleAddressBook();
+        // Simulate a mutating command
+        recorder.afterSuccessfulCommand(new AddCommand(new PersonBuilder().withName("Bob").build()), true);
+        assertTrue(recorder.isAddressBookDirty(ab));
+
+        SessionData snapshot = recorder.buildSnapshot(ab, DEFAULT_GUI_SETTINGS);
+        assertEquals(ab, new AddressBook(snapshot.getAddressBook()));
+        recorder.markSnapshotPersisted();
+        assertFalse(recorder.isAddressBookDirty(ab));
+    }
+
+    @Test
+    public void searchKeywords_restoredFromSessionData() {
+        AddressBook ab = createSampleAddressBook();
+        List<String> keywords = List.of("alice", "bob");
+        SessionData previous = new SessionData(
+                Instant.parse("2024-01-01T10:10:00Z"),
+                ab,
+                keywords,
+                DEFAULT_GUI_SETTINGS);
+        SessionRecorder recorder = new SessionRecorder(ab, DEFAULT_GUI_SETTINGS, Optional.of(previous));
+        SessionData snapshot = recorder.buildSnapshot(ab, DEFAULT_GUI_SETTINGS);
+        assertEquals(keywords, snapshot.getSearchKeywords());
     }
 }
 
